grammar.js
    source_file: $ => repeat(choice(
      $.property_statement,
      $.handler_definition,
      $._statement,
    )),

    _statement: $ => choice(
      $.tell_statement,
      $.if_statement,
      $.repeat_statement,
      $.try_statement,
      $.set_statement,
      $.return_statement,
      $.exit_statement,
      $.error_statement,
      $.considering_statement,
      $.ignoring_statement,
      $.timeout_statement,
      $.transaction_statement,
      $.use_statement,
      $.script_statement,
      $.application_command,
      $.expression_statement,
    ),

    // Comments
    tell_statement: $ => prec.right(choice(
      seq(
        'tell',
        field('target', $.expression),
        'to',
        field('statement', $._statement),
      ),
      seq(
        'tell',
        field('target', $.expression),
        repeat1($._statement),
        'end',
        optional('tell'),
      ),
      seq(
        'tell',
        field('target', $.expression),
      ),
    )),

    // If Statement
    set_statement: $ => seq(
      choice('set', 'copy'),
      field('target', $.expression),
      'to',
      field('value', $.expression),
    ),

    // Return Statement
    use_statement: $ => seq(
      'use',
      choice(
        seq('scripting', 'additions'),
        seq('AppleScript', 'version', $.string),
        seq('framework', $.string),
        seq(
          optional(seq(field('alias', $.identifier), ':')),
          'script',
          $.string,
        ),
        seq(
          optional('application'),
          field('name', $.string),
          optional(seq('version', field('version', $.string))),
        ),
      ),
    ),

    // Script Statement
    front_document: $ => token(prec(10, seq('front', /\s+/, 'document'))),
    property_name: $ => choice(
      // Known multi-word property tokens (highest precedence)
      $.current_session,
      $.current_window,
      $.current_tab,
      $.first_window,
      $.first_process,
      $.first_button,
      $.first_document,
      $.first_item,
      $.front_document,
      $.front_window,
      $.selected_tab,
      $.selected_window,
      $.every_item,
      $.every_window,
      $.scroll_area,
      $.radio_group,
      $.radio_button,
      // Generic multi-word properties
      seq($.identifier, repeat1($.identifier)),
      // Single identifier (lowest precedence)
      $.identifier,
    ),

    // Expression Statement
    expression_statement: $ => $.expression,

    // Objective-C Method Call (AppleScriptObjC)
    expression: $ => choice(
      $.binary_expression,
      $.unary_expression,
      $.type_cast,  // Type cast with 'as' keyword
      $.parenthesized_expression,
      $.application_expression,
      $.path_to_expression,  // "path to" command in expression context
      $.method_call,  // Must be before property_access (higher precedence)
      $.property_access,
      $.element_access,
      $.list,
      $.record,
      $.identifier,
      prec.dynamic(-1, $.property_name),  // Lower dynamic precedence so identifier is preferred
      $.string,
      $.number,
      $.boolean,
      $.missing_value,
      $.current_application,
      $.script_reference,
      $.reference_expression,
    ),

    application_expression: $ => prec(14, seq(
      'application',
      field('name', $.string),
    )),

    element_access: $ => prec.left(15, seq(
      field('element', $.property_name),
      choice(
        seq(field('index', $.number), 'of', field('object', $.expression)),
        seq('of', field('object', $.expression)),
        field('index', $.number),  // Allow implicit object (e.g., "window 1")
      ),
    )),

    identifier: $ => choice(
      /[A-Za-z_][A-Za-z0-9_]*/,
      seq('|', /[^|]+/, '|'),
    ),

    string: $ => seq(
      '"',
      repeat(choice(
        /[^"\\]+/,
        /\\./,
      )),
      '"',
    ),

    number: $ => choice(
      $.integer,
      $.real,
    ),

    integer: $ => /[0-9]+/,

    boolean: $ => choice('true', 'false', 'yes', 'no'),

    list: $ => seq(
      '{',
      optional(seq(
        $.expression,
        repeat(seq(',', $.expression)),
        optional(','),
      )),
      '}',
    ),
