test/corpus/use_statements.txt
================================================================================
use AppleScript version statement
================================================================================

use AppleScript version "2.4"

--------------------------------------------------------------------------------

(source_file
  (use_statement (string)))

================================================================================
use scripting additions statement
================================================================================

use scripting additions

--------------------------------------------------------------------------------

(source_file
  (use_statement))

================================================================================
use framework statement
================================================================================

use framework "Foundation"

--------------------------------------------------------------------------------

(source_file
  (use_statement
    (string)))

================================================================================
use script with alias
================================================================================

use kl : script "Kevin's Library"

--------------------------------------------------------------------------------

(source_file
  (use_statement
    alias: (identifier)
    (string)))

================================================================================
use statement with multiple imports
================================================================================

use AppleScript version "2.4"
use scripting additions
use framework "Foundation"

set x to 5

--------------------------------------------------------------------------------

(source_file
  (use_statement (string))
  (use_statement)
  (use_statement (string))
  (set_statement
    target: (expression (identifier))
    value: (expression (number (integer)))))
